--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,45 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
         </plugin>
+        <plugin>
+          <groupId>com.github.eirslett</groupId>
+          <artifactId>frontend-maven-plugin</artifactId>
+          <!-- Use the latest released version:
+          https://repo1.maven.org/maven2/com/github/eirslett/frontend-maven-plugin/ -->
+          <version>1.6</version>
+          <executions>
+              <execution>
+                  <id>install node and npm</id>
+                  <goals>
+                      <goal>install-node-and-npm</goal>
+                  </goals>
+                  <configuration>
+                      <!-- See https://nodejs.org/en/download/ for latest node and npm (lts) versions -->
+                      <nodeVersion>v8.9.4</nodeVersion>
+                      <npmVersion>5.6.0</npmVersion>
+                  </configuration>
+              </execution>
+              <execution>
+                  <id>npm install</id>
+                  <goals> 
+                      <goal>npm</goal>
+                  </goals>
+                  <!-- Optional configuration which provides for running any npm command -->
+                  <configuration>
+                      <arguments>install</arguments>
+                  </configuration>
+              </execution>
+              <execution>
+                  <id>grunt build</id>
+                  <goals>
+                      <goal>grunt</goal>
+                  </goals>
+                  <configuration>
+                      <arguments>--no-color</arguments>
+                  </configuration>
+              </execution>
+          </executions>
+      </plugin>
     </plugins>
   </build>  
 
